@@ -44,6 +44,7 @@ public:
    */
   static const ObjectImpType* stype();
 
+  Coordinate attachPoint( ) const;
   void draw( KigPainter& p ) const;
   bool contains( const Coordinate& p, int width, const KigWidget& w ) const;
   bool inRect( const Rect& r, int width, const KigWidget& w ) const;
