@@ -1,3 +1,13 @@
+2005-01-20  Maurizio Paolini <paolini@dmf.unicatt.it>
+
+	* new "attaching" style for labels to objects, based on the
+	new RelativePointType.  This type is a point located at a
+	relative position with respect to a given attachPoint()
+	associated to the ObjectImp.  It depends on three arguments:
+	the object to which the position is relative and two DoubleImp
+	givin the x and y displacement.  Now use for angles and
+	polygons.
+
 2005-01-18  Maurizio Paolini <paolini@dmf.unicatt.it>
 
 	* now the construction of a generic affinity and a generic
